test/algeff/wrong/ops4.kk.out
test/algeff/wrong/ops4.kk(10,21): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead